--- a/Packager/Templates/base.html
+++ b/Packager/Templates/base.html
@@ -3,7 +3,7 @@
 <head>
 	{% load dajaxice_templatetags %}
 	<meta charset="utf-8" />
-	<title>PlayboyTV LA: VOD Packager</title>
+	<title>NEPE: PlayboyTV LA VOD Packager - Gen2</title>
 	<link rel="stylesheet" href="/css/reset.css" />
 	<link rel="stylesheet" href="/css/text.css" />
 	<link rel="stylesheet" href="/css/960.css" />
@@ -38,12 +38,10 @@
 		<div class="grid_3" id="navbar">
 			<br />
 			<a href="/vod" class="bttn" style="width: 150px;">Items</a><br />
-			<a href="/vod/customers" class="bttn" style="width: 150px;">Customers</a><br />
-			<a href="/vod/packages" class="bttn" style="width: 150px;">Packages</a><br />
 			<a href="/vod/delivery/" class="bttn" style="width: 150px;">Delivery</a><br />
 			<a href="/vod/dashboard" class="bttn" style="width: 150px;">Dashboard</a><br />
 			<a href="/vod/logs" class="bttn" style="width: 150px;">Run time</a><br />
-			<a href="/vod/bulk_dely/" class="bttn" style="width: 150px;">Automatic Dely</a><br />
+			<a href="/vod/smart_delivery/" class="bttn" style="width: 150px;">Smart Delivery</a><br />
 			<br /><br />
 			<a href="/admin" target="_new" class="bttn" style="width: 150px;">Admin</a><br />
 			<a href="/logout" class="bttn" style="width: 150px;">Logout</a>
