--- a/Packager/Templates/image_renditions_upload.html
+++ b/Packager/Templates/image_renditions_upload.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_views.html" %}
 
 {% block resources %}
 <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
