--- a/Packager/Templates/view_logs.html
+++ b/Packager/Templates/view_logs.html
@@ -1,7 +1,7 @@
 {% extends "base_views.html" %}
 
 {% block title %}
-<a href="/vod/logs">Logs</a> | <a href="/vod/daemons">Daemons</a> | <a href="/vod/actions">Actions</a>
+<a href="/vod/logs">Logs</a> | <a href="/vod/daemons">Daemons</a>
 {% endblock %}
 
 {% block content %}
