--- a/Packager/Templates/image_rendition.html
+++ b/Packager/Templates/image_rendition.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_views.html" %}
 
 {% block content %}
 <div class="grid_9" style="color: #fff; padding-top: 5px;">
