--- a/Packager/Templates/search_results.html
+++ b/Packager/Templates/search_results.html
@@ -25,7 +25,7 @@
 			<td>{{entry.id}}</td>
 			<td class="center">{{ entry.creation_date }}</td>
 			<td class="center">{{ entry.group }}</td>
-			<td><a href="/admin/Packager_app/item/{{item.id}}">ADMIN</a></td>
+			<td><a href="/admin/Packager_app/item/{{entry.id}}">ADMIN</a></td>
 		</tr>
 {% endfor %}
 	</tbody>
