--- a/Packager/Templates/item.html
+++ b/Packager/Templates/item.html
@@ -12,6 +12,25 @@
 <script type="text/javascript" src="/js/jquery.mousewheel-3.0.6.pack.js"></script>
 <!-- FANCYBOX: Add fancyBox main JS and CSS files -->
 <script type="text/javascript" src="/js/fancybox/jquery.fancybox.js?v=2.1.3"></script>
+
+<script type="text/javascript">
+// Popup window code
+function newPopup(url) {
+    popupWindow = window.open(
+	    url,'popUpWindow','height=700,width=800,left=10,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
+	    }
+		
+// pop up usando fancybox, con cualquier href más la clase "mypop" 		
+jQuery(document).ready(function() {
+	$(".mypop").fancybox({
+		'autoScale'  		: 'true',
+		'titlePosition'		: 'inside',
+		'transitionIn'		: 'none',
+		'transitionOut'		: 'none'
+	});
+});		
+</script>
+
 <link rel="stylesheet" type="text/css" href="/js/fancybox/jquery.fancybox.css?v=2.1.2" media="screen" />
 {% endblock %}
 
@@ -172,7 +191,7 @@
 				<tbody class="itemVwTbody">
 			{% for ir in image_renditions %}
 			<tr>
-				<td><a href="/images_proc/{{ir.file_name}}">{{ir.file_name}}</a></td>
+				<td><a class="mypop" href="/images_proc/{{ir.file_name}}">{{ir.file_name}}</a></td>
 				<td>{{ir.image_profile}}</td>
 				<td><center><span class="irstatus_{{ir.status}}" /></center></td>
 			</tr>
