--- a/Packager/Templates/view_daemons.html
+++ b/Packager/Templates/view_daemons.html
@@ -25,6 +25,10 @@
 	    <td class="display_icon" style="width: 1%;"><span class="status_daemon_{{ QChecker_status }}" /></td>
 	</tr>
 	<tr style="border-bottom: 1px solid white;">
+	    <td ><b>QVirtualVcn</b> <span class="processDescription">Generate Derivated images from Master</span></td>
+	    <td class="display_icon" style="width: 1%;"><span class="status_daemon_{{ QVirtualVcn_status }}" /></td>
+	</tr>
+	<tr style="border-bottom: 1px solid white;">
 	    <td ><b>QPrePackager</b> <span class="processDescription">Package Dispacher.</span></td>
 	    <td class="display_icon" style="width: 1%;"><span class="status_daemon_{{ QPrePackager_status }}" /></td>
 	</tr>
